--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
     <div class="project-grid">
         <div class="card">
             <h4>Portfolio Website</h4>
-            <a href="index.html"><p>Responsive HTML & CSS portfolio design.</p></a>
+            <a href="index.html" target="_blank"><p>Responsive HTML & CSS portfolio design.</p></a>
         </div>
         <div class="card">
             <h4>Student Registration Form</h4>
-            <a href="index.html"><p>Clean & validated form using HTML.</p></a>
+            <a href="form.html" target="_blank"><p>Clean & validated form using HTML.</p></a>
         </div>
         <div class="card">
             <h4>Product Landing Page</h4>
-            <a href="index.html"><p>Modern UI with flexbox layout.</p></a>
+            <a href="productpage.html" target="_blank"><p>Modern UI with flexbox layout.</p></a>
         </div>
     </div>
 </section>
