--- a/productpage.html
+++ b/productpage.html
@@ -14,28 +14,28 @@
             <h3>HP 255 G10 Laptop (16GB RAM, 512GB SSD, Ryzen 3)</h3>
             <p>A fast and reliable laptop ideal for daily work, browsing, and multitasking.</p>
             <div class="price">₹32,129</div>
-            <a href="https://www.amazon.in/HP-255-Laptop-i5-1135G7-Windows/dp/B0FDBLR2HT/ref=asc_df_B0FDBLR2HT?mcid=5e304641f6383015a1ba61eca8edc5ce&tag=googleshopdes-21&linkCode=df0&hvadid=709855510254&hvpos=&hvnetw=g&hvrand=14414575425685382968&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9144440&hvtargid=pla-2450265277165&gad_source=1&th=1" class="button">Buy Now</a>
+            <a href="https://www.amazon.in/HP-255-Laptop-i5-1135G7-Windows/dp/B0FDBLR2HT/ref=asc_df_B0FDBLR2HT?mcid=5e304641f6383015a1ba61eca8edc5ce&tag=googleshopdes-21&linkCode=df0&hvadid=709855510254&hvpos=&hvnetw=g&hvrand=14414575425685382968&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9144440&hvtargid=pla-2450265277165&gad_source=1&th=1" class="button" target="_blank">Buy Now</a>
         </div>
         <div class="product-card">
             <img src="phone.jpeg" alt="iPhone 15" height="220px" width="220px">
             <h3>Apple iPhone 15 (128GB) - Green</h3>
             <p>Experience smooth performance, stunning photos, and an advanced A16 chip.</p>
             <div class="price">₹52,990</div>
-            <a href="" class="button">Buy Now</a>
+            <a href="https://www.flipkart.com/apple-iphone-15-green-128-gb/p/itm235cd318bde73" class="button" target="_blank">Buy Now</a>
         </div>
         <div class="product-card">
             <img src="microwave.png" alt="LG Microwave" height="220px" width="220px">
             <h3>LG 28 L Convection Microwave Oven</h3>
             <p>Perfect for baking, grilling, and quick heating with a large 28L capacity.</p>
             <div class="price">₹14,999</div>
-            <a href="" class="button">Buy Now</a>
+            <a href="https://www.amazon.in/LG-Convection-Microwave-MC2846BV-Black/dp/B06XKC8S71/ref=sr_1_1_sspa?adgrpid=56392768302&dib=eyJ2IjoiMSJ9.DkiNp5Lg4PNCNnsEXFgqss2-QQ95wMV1M_ZS9ude950npvT8c6-Cthpdq_6aEWpe-TUk3AKvETNSbdApdLT6FWvYzjUHCY9ZhwvszMTiDRECZfJvadWAGdbC-ZREXncDJC_xJcV1bldlG3z8OOSu18L7CUlUGT_TKkYoNFmeDKUqk_xUMbzlFoO09VoSUx5PJ1DkTwO4yd2QAIIsl5zSqmXcEEpYPRn6_FEX6hfpKHA.ZkEhUB--snnKQtRx-jk7S4PrBUrIx2HbQd707ErnLYM&dib_tag=se&ext_vrnc=hi&hvadid=763250537880&hvdev=c&hvlocphy=9144440&hvnetw=g&hvqmt=e&hvrand=5288856340237640466&hvtargid=kwd-427449987069&hydadcr=4443_2308238&keywords=lg%2B28%2Bl%2Bconvection%2Bmicrowave%2Boven&mcid=b1d571ea336032a2ab036f06d7a71a83&qid=1766664791&sr=8-1-spons&aref=VRNYLkOU29&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&th=1" class="button" target="_blank">Buy Now</a>
         </div>
         <div class="product-card">
             <img src="airpods.jpeg" alt="boAt Airpods" height="220px" width="220px">
             <h3>boAt Nirvana Zenith Pro Airpods (2025)</h3>
             <p>Premium wireless earbuds with clear sound and long-lasting battery life.</p>
             <div class="price">₹1299</div>
-            <a href="" class="button">Buy Now</a>
+            <a href="https://www.boat-lifestyle.com/products/nirvana-zenith-pro-wireless-earphones?srsltid=AfmBOopEvyayFsOs7DEbUpmHDy7lv2MDOFvzS3X8r3_qyfjzdGyIDJT7" class="button" target="_blank">Buy Now</a>
         </div>
     </div>
 </body>
